Version 1.1.0-CVS (?? ??? 2006)
 - Patch 1445579: sort users in views
 - Performance improvement: if "cachedir" is defined in settings.php, then
   translations are parsed and stored as binary.  Future requests will load
   the already parsed binary data.
 - Added new options in includes/settings.php:
   "cachedir" specifies a db query cache directory.
   "db_debug" if "on", then SQL will be displayed at bottom of each page
 - Fixed bug 1448958: All day events incorrectly displayed in week view
 - Fixed bug 1449561: overlapping buttons at 'adminhome.php'
 - Fixed bug 1446790: user-ldap.php bug
 - Updated user-app-joomla.php to work with Joomla 1.0.8
 - Fixed bug  1445762: "cyclic link" when trying to remote subscribe
   but this may affect bug 1403574
 - Fixed bug 1440066: Administrative Tools graphical problem in IE
 - Fixed bug 1411755: Error after editing entry that has a reminder set
 - Fixed bug 1445157: Canadian english not defined, fix included
 - Fixed bug 1446262: Broken \n in functions.php
 - Implemented improved reminder UI and added repeating functionality per RFC2445
 - Implemented PATCH 1442317: view_entry.php: Disable $proxy_fullname for LDAP users
 - Fixed bug 1366002: No 'all day' event with manual repeat at either DST change
 - Implemented Feature Request1440366: Add a none option to Category Icons
 - Implemented PATCH 1440975: Use category name as title for category icons
 - Fixed bug 1434525: rss.php shows some events twice Second Pass
 - Fixed bug 1439655: cannot save permissions of public access using UAC
 - Fixed bug 1438954: "Top menu" not working on view_entry.php
 - Fixed bug 1438952: Description & Site Extras not showing in pop-ups - CVS
 - Fixed bug 1416408: installation-wizard hang-up
 - Added updated UAC controls. This requires a databse change. Users can now
   grant permission to their own calendars.
 - Fixed bug 1435533: No headers if $LANGUAGE empty
 - Fixed bug 1435460: Extra '.txt' in includes/translate.php