@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2006)
+ - Patch 1279537: Don't display confidential events in upcoming.php
  - Patch 1445579: sort users in views
  - Performance improvement: if "cachedir" is defined in settings.php, then
    translations are parsed and stored as binary.  Future requests will load
